<resources>
    <string name="app_name">Projeto_padrao</string>
    <string name="login">Login</string>
    <string name="my_title">My Title</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registre">Resgistre-se</string>
    <string name="registrar">Registrar</string>
    <string name="cancel">Cancelar</string>
    <string name="name">Nome Completo</string>
    <string name="us3r">Usuario</string>
    <string name="terms">Eu aceito os Terms and Privacy </string>
    <string name="exit">Sair</string>


</resources>
